--- a/Osa 2/puhelinluettelo/src/index.css
+++ b/Osa 2/puhelinluettelo/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.info {
+color: black
+;
+background: #00cc00
+;
+font-size: 15px;
+border-style: solid;
+border-radius: 5px;
+padding: 10px;
+margin-bottom: 25px;
+width: 40%;
+}
+
+.error {
+  color: black;
+  background: red;
+  font-size: 15px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 25px;
+  width: 40%;
+}
